--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ Pyphen==0.9.5
 python-dateutil==2.7.3
 python3-openid==3.1.0
 pytz==2018.5
+redis==3.3.11
 requests==2.20.0
 requests-oauthlib==1.0.0
 six==1.11.0
