started application backend dev

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 amqp==2.5.2
 anyjson==0.3.3
+apns2==0.7.1
 beautifulsoup4==4.6.0
 billiard==3.6.1.0
 bleach==2.1.4
@@ -9,6 +10,7 @@ celery==4.4.0
 certifi==2018.8.24
 cffi==1.13.2
 chardet==3.0.4
+cryptography==3.0
 cssselect2==0.2.2
 defusedxml==0.5.0
 Django==1.11.15
@@ -21,12 +23,19 @@ django-filter==2.2.0
 django-htmlmin==0.10.0
 django-modelcluster==4.3
 django-mptt==0.8.7
+django-private-storage==2.2.2
+django-push-notifications==2.0.0
 django-taggit==0.23.0
 django-treebeard==4.3
 djangorestframework==3.7.0
 draftjs-exporter==2.1.5
 Faker==0.8.18
+h2==2.6.2
+hpack==3.0.0
 html5lib==0.999999999
+http-ece==1.1.0
+hyper==0.7.0
+hyperframe==3.2.0
 idna==2.7
 importlib-metadata==1.4.0
 ipaddress==1.0.22
@@ -41,14 +50,16 @@ path.py==10.3.1
 Pillow==4.1.1
 pkg-resources==0.0.0
 psycopg2-binary==2.7.5
+py-vapid==1.7.1
 pycparser==2.19
 PyJWT==1.6.4
 Pyphen==0.9.5
 python-dateutil==2.7.3
 python3-openid==3.1.0
 pytz==2018.5
+pywebpush==1.11.0
 redis==3.3.11
-requests==2.20.0
+requests==2.24.0
 requests-oauthlib==1.0.0
 six==1.11.0
 social-auth-core==1.7.0
